# nrvas

./: .env.example  Dockerfile  README.md  alembic.ini  bot.py  config.toml  db.db  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
documents/: candidates.xlsx  Шаблон собеседования.docx
src/app/: __main__.py  buttons.py  config.py  config.toml  constants.py  exceptions.py  ioc.py  state.py  utils.py
src/app/adapter/persistence/: db.py
src/app/application/commands/: faq_command.py  start_command.py  telegram_command.py
src/app/application/interface/: transaction.py
src/app/application/usecase/: answer.py  candidate.py  faq.py  question.py  start.py  telegram.py
src/app/callbacks/: nationality_callback.py  recruitment_callback.py  university_callback.py
src/app/documents/: candidate.xlsx  faq.xlsx  questions.xlsx  Лист собеседования.docx  Согласие.docx  Шаблон собеседования.docx
src/app/domain/: answer.py  candidate.py  faq.py  question.py
src/app/handlers/: candidate_data_handler.py  faq_handler.py  id_handler.py  recruitment_handler.py  start_command.py  start_handler.py  welcome_command.py
src/app/presentation/: buttons.py  interactor.py
src/app/presentation/callbacks/: __init__.py  answer_callback.py  base.py  faq_callback.py  nationality_callback.py  pagination_callback.py  promoBrochure_callback.py  promoCard_callback.py  promoStand_callback.py  promoVideo_callback.py  question_callback.py  recruitment_callback.py  requirements_callback.py  specialties_callback.py  university_callback.py  (+1 more)
src/app/stickers/: hello.tgs
(+45 files in other folders)
