[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.1.0"
dependencies = [
    "pyTelegramBotAPI<=4.25.0",
    "openpyxl<=3.1.5",
    "pydantic<=2.10.5",

    "SQLAlchemy<=2.0.37",
    "alembic<=1.14.0",
    "psycopg[binary,pool]<=3.2.4"
]